[gd_scene load_steps=2 format=3 uid="uid://dbum7uvwdjp08"]

[ext_resource type="Script" uid="uid://dxass45ew1qun" path="res://main_menu.gd" id="1_gt7o6"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gt7o6")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 59.0
offset_top = 39.0
offset_right = 223.0
offset_bottom = 62.0
text = "Institute of evil game"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Jogar"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Controles
"

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Cr√©ditos
"

[node name="ControlesDialog" type="Window" parent="."]

[node name="Label" type="Label" parent="ControlesDialog"]
offset_right = 273.0
offset_bottom = 23.0
text = "Use as teclas W, A, S, D para mover."

[node name="CreditosDialog" type="Window" parent="."]

[node name="Label" type="Label" parent="CreditosDialog"]
offset_right = 40.0
offset_bottom = 23.0
text = "Feito por..."
